<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="recipe_placeholder">Recipe</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="instructions_list">Instructions list</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="no_video_landscape">Sorry no video file is available for this step of the recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_finder">Recipe Finder</string>
    <string name="recipe_JSON">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="step_list_label">recipeStepsListFragmentLabel</string>
    <string name="home">Home</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_description">Load up your recipes ingredients</string>
    <string name="widget_ingredients_list">Ingredients List</string>
    <string name="of">  of  </string>
    <string name="widget_icon_cd">Cake icon for recipe app widget whilst no recipe is currently selected.</string>
</resources>
