<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:id="@+id/widget_complete_view"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/appwidget_ingredient_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/recipe_placeholder"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/appwidget_ingredient_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/of"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        />
    <TextView
        android:id="@+id/appwidget_ingredient_number_of_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/recipe_placeholder"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/recipe_placeholder"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/widget_icon"
        android:id="@+id/widget_icon"
        android:contentDescription="@string/widget_icon_cd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/widget_previous"
        android:paddingTop="8dp"
        android:layout_gravity="left"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/widget_next"
        android:paddingTop="8dp"
        android:layout_gravity="right"/>
    </LinearLayout>

</LinearLayout>